--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
   </div>
 
   <div class="contact-group">
-    <a class="button" href="./angebot.pdf">ANGEBOT</a>
+    <a class="button" href="./Angebot.pdf">ANGEBOT</a>
   </div>
 
 
