--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+
 
 <html>
 
@@ -23,16 +23,15 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 </head>
 
 <body>
-  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center"></a>
+  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center"/>
 
-  <div class="section-head" />
-  <!-- <div class="section-head" id="banner" /> -->
-  <img src="./images/truck_main.jpg" class="welcome_image" />
-  <h1> *** WOODY PIZZA TRUCK *** </h1>
-  <h2> PIZZA AUS DEM HOLZOFEN </h2>
-  <h2>booking@woodypizza.ch *** MOBILE +41 78 740 68 62</h2>
+  <div class="section-head">
+	  <img src="./images/truck_main.jpg" alt="Foto vom Saurer Oldtimer Truck" class="welcome_image"/>
+	  <h1> *** WOODY PIZZA TRUCK *** </h1>
+	  <h2> PIZZA AUS DEM HOLZOFEN </h2>
+	  <h2>booking@woodypizza.ch *** MOBILE +41 78 740 68 62</h2>
   </div>
-  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center"></a>
+  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center"/>
 
   <br>
 
@@ -41,7 +40,7 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 
 
   <div class="contact-group">
-    <input class="mail-field" type="text" placeholder="email@name.com"></input>
+    <input class="mail-field" type="text" placeholder="email@name.com">
     <a class="button" href="#">Contact us NOW</a>
   </div>
 
@@ -67,7 +66,7 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
     <h3>What our customers say:</h3>
 
     <blockquote class="testimonial">
-      <img class="avatar" src="./images/roli_avatar.jpg">
+      <img class="avatar" src="./images/roli_avatar.jpg" alt="Avatar von Roli">
       <p>
         "This was absolutely the best Pizza I've ever had in my life!"
       </p>
@@ -77,7 +76,7 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 
 
     <blockquote class="testimonial">
-      <img class="avatar" src="./images/steven.png">
+      <img class="avatar" src="./images/steven.png" alt="Avatar von Steven">
       <p>
         "It was a real pleasure to encounter the truck at the camping! I just loved the taste and the whole idea!"
       </p>
@@ -85,7 +84,7 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
     </blockquote>
 
     <blockquote class="testimonial">
-      <img class="avatar" src="./images/roland.png">
+      <img class="avatar" src="./images/roland.png" alt="Avatar von Roli">
       <p>
         "Best Pizza in Town :)"
       </p>
@@ -93,6 +92,12 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
     </blockquote>
   </div>
 
+
+	 <form action="/action_page.php">
+  First name: <input type="text" name="fname"><br>
+  Last name: <input type="text" name="lname"><br>
+  <input type="submit" value="Submit">
+</form> 
 
 
 
