--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <meta name="keywords" content="Woody Pizza, woodypizza, Holzofenpizza, Foodtruck, Event, Catering, Saurer, Oldtimer, Party, Qualität" />
   <meta name="description" content="Woody Pizza Truck
 Holzofenpizza vom Saurer Oldtimer LKW" />
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"> -->
   <script src="./background_images.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Eater" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Holtwood+One+SC" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet"> 
   <!-- <link href="https://fonts.googleapis.com/css?family=Eater|Indie+Flower" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet"> -->
   <script src="./background_images.js"></script>
@@ -23,15 +24,39 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 </head>
 
 <body>
-  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center"/>
+
+
+  <!--
+  <nav id="nav">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="./Standorte.html">Standorte</a></li>
+      <li><a href="./Angebot.pdf">Angebot</a></li>
+
+    </ul>
+  </nav> -->
+
+	<div id="nav">
+ 	<ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="./Standorte.html">Standorte</a></li>
+      <li><a href="./Angebot.pdf">Angebot</a></li>
+      <li><a href="./booking.html">Booking</a></li>
+	  <li><a href="./wanted.pdf">Wanted</a></li>
+    </ul>
+
+		
+	</div>
+	
 
   <div class="section-head">
-	  <img src="./images/truck_main.jpg" alt="Foto vom Saurer Oldtimer Truck" class="welcome_image"/>
-	  <h1> *** WOODY PIZZA TRUCK *** </h1>
-	  <h2> PIZZA AUS DEM HOLZOFEN </h2>
-	  <h2>booking@woodypizza.ch *** MOBILE +41 78 740 68 62</h2>
+    <img src="./images/truck_main.jpg" alt="Foto vom Saurer Oldtimer Truck" class="welcome_image" />
+    <h1> *** WOODY PIZZA TRUCK *** </h1>
+     <h2> PIZZA AUS DEM HOLZOFEN </h2>
+	  <h3>booking@woodypizza.ch</h3>
+	  <h3>mobile +41 78 740 68 62</h3>
   </div>
-  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center"/>
+  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center" />
 
   <br>
 
@@ -63,10 +88,9 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 
 
   <div class="section">
-    <h3>What our customers say:</h3>
+    <h3>Meinungen der Gäste</h3>
 
     <blockquote class="testimonial">
-      <img class="avatar" src="./images/roli_avatar.jpg" alt="Avatar von Roli">
       <p>
         "This was absolutely the best Pizza I've ever had in my life!"
       </p>
@@ -93,11 +117,6 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
   </div>
 
 
-	 <form action="/action_page.php">
-  First name: <input type="text" name="fname"><br>
-  Last name: <input type="text" name="lname"><br>
-  <input type="submit" value="Submit">
-</form> 
 
 
 
