--- a/meinungen.html
+++ b/meinungen.html
@@ -26,15 +26,6 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 <body>
 
 
-  <!--
-  <nav id="nav">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="./Standorte.html">Standorte</a></li>
-      <li><a href="./Angebot.pdf">Angebot</a></li>
-
-    </ul>
-  </nav> -->
 
 	<div id="nav">
 		 <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="150px" class="center" />
@@ -47,48 +38,37 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 	  <li><a href="./meinungen.html">Meinungen</a></li>
 	  <li><a href="./wanted.pdf">Wanted</a></li>
     </ul>
-
-		
-	</div>
+</div>
 	
-
-  <div class="section-head">
-    <img src="./images/truck_main.jpg" alt="Foto vom Saurer Oldtimer Truck" class="welcome_image center" />
-    <h1> *** WOODY PIZZA TRUCK *** </h1>
-     <h2> PIZZA AUS DEM HOLZOFEN </h2>
-	  <h3>booking@woodypizza.ch</h3>
-	  <h3>mobile +41 78 740 68 62</h3>
-	  <h3>Unsere STREETFOOD Standorte<br> Pizza aus dem Holzofen jeweils ab 11.45 Uhr<br> Achtung! Neu! Auf dem Campingplatz in Zug: Mittag & Abend
-  </h3>
-  </div>
-  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center" />
-
   <br>
+	
+  <div class="section">
+    <h2>Meinungen der Gäste</h2>
 
-  
+    <blockquote class="testimonial">
+      <p>
+        "This was absolutely the best Pizza I've ever had in my life!"
+      </p>
+      <cite>- Roland Gerber, CEO ToolsBox (Tools for workers)</cite>
+    </blockquote>
 
 
-  <div class="contact-group">
-    <input class="mail-field" type="text" placeholder="email@name.com">
-    <a class="button" href="#">Contact us NOW</a>
+    <blockquote class="testimonial">
+      <img class="avatar" src="./images/steven.png" alt="Avatar von Steven">
+      <p>
+        "It was a real pleasure to encounter the truck at the camping! I just loved the taste and the whole idea!"
+      </p>
+      <cite>- Steven Hoffmann, CEO FeelGood Inc. </cite>
+    </blockquote>
+
+    <blockquote class="testimonial">
+      <img class="avatar" src="./images/roland.png" alt="Avatar von Roli">
+      <p>
+        "Best Pizza in Town :)"
+      </p>
+      <cite>- Steven Hoffmann, CEO FeelGood Inc. </cite>
+    </blockquote>
   </div>
-
-  <div class="contact-group">
-    <a class="button" href="./wanted.pdf">WANTED: PIZZAIOLO</a>
-  </div>
-
-  <div class="contact-group">
-    <a class="button" href="./Angebot.pdf">ANGEBOT</a>
-  </div>
-
-
-  <!-- <div class="section"> -->
-  <!-- <div>
-    <img src="./images/truck_main.jpg" />
-    <h1>*** WOODY PIZZA TRUCK *** </h1>
-    <h1>*** PIZZA AUS DEM HOLZOFEN ***</h1>
-    <h2>booking@woodypizza.ch *** MOBILE +41 78 740 68 62</h2>
-  </div> -->
 
 
 
