--- a/landing_page.html
+++ b/landing_page.html
@@ -27,34 +27,14 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 <body>
 
 
-  <!--
-  <nav id="nav">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="./Standorte.html">Standorte</a></li>
-      <li><a href="./Angebot.pdf">Angebot</a></li>
-
-    </ul>
-  </nav> -->
-
-	<div id="nav">
-		 <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="200px" class="center" />
-
- 	<ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./Standorte.html">Standorte</a></li>
-      <li><a href="./Angebot.pdf">Angebot</a></li>
-      <li><a href="./booking.html">Booking</a></li>
-	  <li><a href="./meinungen.html">Meinungen</a></li>
-	  <li><a href="./wanted.pdf">Wanted</a></li>
-    </ul>
-
-		
-	</div>
+	
+  <!--<div id="nav">
+	 <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center" />
+  </div> -->
 	
 
-  <div class="section-head">
-	   <h1> *** WOODY PIZZA TRUCK *** </h1>
+  <!-- <div class="section-head">
+	 <h1> *** WOODY PIZZA TRUCK *** </h1>
      <h2> PIZZA AUS DEM HOLZOFEN </h2>
 	
     <img src="./images/truck_main.jpg" alt="Foto vom Saurer Oldtimer Truck" class="welcome_image center" />
@@ -62,29 +42,16 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 	  <h3>mobile +41 78 740 68 62</h3>
 	  <h3>Unsere STREETFOOD Standorte<br> Pizza aus dem Holzofen jeweils ab 11.45 Uhr<br> Achtung! Neu! Auf dem Campingplatz in Zug: Mittag & Abend
   </h3>
-  </div>
-  <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="300px" class="center" />
+  </div> -->
+   <a href="./index.html"><img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="400px" class="center" /></a>
+	
+    <a href="./index.html"><img src="./images/truck_main.jpg" alt="Foto vom Saurer Oldtimer Truck" class="welcome_image center" /></a>
+    
 
   <br>
 
   
 
-
-  <div class="contact-group">
-    <input class="mail-field" type="text" placeholder="email@name.com">
-    <a class="button" href="#">Contact us NOW</a>
-  </div>
-
-  <div class="contact-group">
-    <a class="button" href="./wanted.pdf">WANTED: PIZZAIOLO</a>
-  </div>
-
-  <div class="contact-group">
-    <a class="button" href="./Angebot.pdf">ANGEBOT</a>
-  </div>
-
-
- 
 
 </body>
 
