--- a/meinungen.html
+++ b/meinungen.html
@@ -16,7 +16,7 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Holtwood+One+SC" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet"> 
   <!-- <link href="https://fonts.googleapis.com/css?family=Eater|Indie+Flower" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet"> -->
   <script src="./background_images.js"></script>
@@ -28,7 +28,7 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
 
 
 	<div id="nav">
-		 <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="150px" class="center" />
+		 <img src="./images/woodypizzatruck_logo.png" alt="Image of Woody Pizza Truck" width="200px" class="center" />
 
  	<ul>
       <li><a href="./index.html">Home</a></li>
@@ -49,7 +49,7 @@ Holzofenpizza vom Saurer Oldtimer LKW" />
       <p>
         "This was absolutely the best Pizza I've ever had in my life!"
       </p>
-      <cite>- Roland Gerber, CEO ToolsBox (Tools for workers)</cite>
+      <cite class="testimonial">- Roland Gerber, CEO ToolsBox (Tools for workers)</cite>
     </blockquote>
 
 
